# jmd-commons

./: .gitignore  CONVENTIONS.md  README.md  pyproject.toml
src/jmd_commons/: __init__.py  paths.py
tests/: test_paths.py
